--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
       </div>
     </div>
 
+   <script src="https://code.jquery.com/jquery-3.2.1.js"
+    integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+    crossorigin="anonymous"></script>
     <script src="starwars.js" charset="utf-8"></script>
     <script src="restart-animation.js" charset="utf-8"></script>
   </body>
